<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.healthdata.ui.InitialScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/phone_settings_image_view"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@drawable/image_1"
            android:contentDescription="@string/phone_settings"
            android:scaleType="fitXY"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_need_access_to_your_health_amp_activity_data"
            android:textColor="@color/blue_color_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_settings_image_view" />


        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_permissions_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:onClick="@{()->viewmodel.openPermissionsSettings()}"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="15dp"
            android:text="@string/go_to_permissions"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>